Landing page sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="top"></div>
+    <div id="mid"></div>
+    <div id="bottom"></div>
 </body>
 </html>
