--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="top"></div>
+    <div id="headder"></div>
     <div id="mid"></div>
-    <div id="bottom"></div>
+    <div id="footer"></div>
 </body>
 </html>
