--- a/index.html
+++ b/index.html
@@ -5,10 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="top"></div>
-    <div id="mid"></div>
-    <div id="bottom"></div>
+    <div id="headder"></div>
+    <div id="mid">
+    <section>
+       <h1>Send Flowers & Exclusive Gifts</h1>
+        <div id="flower">
+          <a class="hover" href=""><img src="./images/flower-01.webp" alt=""> <h3>Same Day Flower Delivery</h3></a>
+          <a class="hover" href=""><img src="./images/flower-02.webp" alt=""> <h3>Sympathy</h3></a>
+          <a class="hover" href=""><img src="./images/flower-03.webp" alt=""> <h3>Get Well</h3></a>
+          <a class="hover" href=""><img src="./images/flower-04.webp" alt=""> <h3>Love & Romance</h3></a>
+          <a class="hover" href=""><img src="./images/flower-05.webp" alt=""> <h3>Chocolate Coverdes <br>Stawberries
+          </h3></a>
+          <a class="hover" href=""><img src="./images/flower-06.webp" alt=""> <h3>Just Because</h3></a>
+        </div>
+        <div id="sell">
+            <div class="best">
+                <div>
+                    <img src="./images/bestseller.webp" alt=""></h3>
+                    <h3 class="text">Best Seller</h3>
+                </div>
+                <div>
+                    <img src="./images/House plants.webp" alt=""></div>
+                    <h3 class="text2">House Plants</h3>
+                </div>
+            <div class="DIY"><img src="./images/start.jpeg" alt=""></div>
+        </div>
+        <div class="icon">
+           <div><img src="images/instagram-icon.png" alt=""></div>
+           <div><h1>Share Your #MadeMeSmile Flowers Moment</h1></div>  
+        </div>
+        <div class="share">
+            <img src="./images/dog-1.webp" alt="">
+            <img src="./images/dog-2.webp" alt="">
+            <img src="./images/dog-3.webp" alt="">
+            <img src="./images/dog-4.webp" alt="">
+       </div>
+    </section>
+    </div>
+    <div id="footer"></div>
 </body>
 </html>
