--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <div id="headder"></div>
     <div id="mid"></div>
     <div id="footer"></div>
+
+
+
 </body>
 </html>
+<script>
+    
+</script>
