--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <section>
        <h1>Send Flowers & Exclusive Gifts</h1>
         <div id="flower">
-          <a class="hover" href=""><img src="./images/flower-01.webp" alt=""> <h3>Same Day Flower Delivery</h3></a>
-          <a class="hover" href=""><img src="./images/flower-02.webp" alt=""> <h3>Sympathy</h3></a>
-          <a class="hover" href=""><img src="./images/flower-03.webp" alt=""> <h3>Get Well</h3></a>
-          <a class="hover" href=""><img src="./images/flower-04.webp" alt=""> <h3>Love & Romance</h3></a>
-          <a class="hover" href=""><img src="./images/flower-05.webp" alt=""> <h3>Chocolate Coverdes <br>Stawberries
+          <a class="hover" href="./product.html"><img src="./images/flower-01.webp" alt=""> <h3>Same Day Flower Delivery</h3></a>
+          <a class="hover" href="./product.html"><img src="./images/flower-02.webp" alt=""> <h3>Sympathy</h3></a>
+          <a class="hover" href="./product.html"><img src="./images/flower-03.webp" alt=""> <h3>Get Well</h3></a>
+          <a class="hover" href="./product.html"><img src="./images/flower-04.webp" alt=""> <h3>Love & Romance</h3></a>
+          <a class="hover" href="./product.html"><img src="./images/flower-05.webp" alt=""> <h3>Chocolate Coverdes <br>Stawberries
           </h3></a>
           <a class="hover" href=""><img src="./images/flower-06.webp" alt=""> <h3>Just Because</h3></a>
         </div>
