--- a/index.html
+++ b/index.html
@@ -144,16 +144,75 @@
       <nav>
         <div id="options">
           <ul>
-            <li id="birthday"><a href="#">BIRTHDAY</a></li>
-            <li id="sympathy"><a href="#">SYMPATHY</a></li>
-            <li id="occasion"><a href="#">OCCASIONS</a></li>
-            <li id="flowers"><a href="#">FLOWERS</a></li>
-            <li id="plants"><a href="#">PLANTS</a></li>
-            <li id="food"><a href="#">GIFT BASKETS & FOOD</a></li>
-            <li id="gift"><a href="#">GIFTS & MORE</a></li>
-            <li id="delivery"><a href="#">SAME-DAY DELIVERY</a></li>
-            <li id="sale"><a href="#">SALE</a></li>
-            <li id="community"><a href="#">COMMUNITY</a></li>
+            <li id="birthday"><a href="#">BIRTHDAY</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li id="birthday"><a href="#">SYMPATHY</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li> <li id="birthday"><a href="#">OCCASIONS</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li id="birthday"><a href="#">FLOWERS</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li id="birthday"><a href="#">PLANTS</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li id="birthday"><a href="#">GIFT BASKETS & FOOD</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li id="sympathy"><a href="#">GIFTS & MORE</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li><a href="#">SAME-DAY DELIVERY</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li><a href="#">SALE</a>
+              <ul>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
+            <li><a href="#">COMMUNITY</a>
+              <ul>
+                 <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+                <li><a href="#">Birthday</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </nav>
