cart and checkout page uploaded with css and functions

--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
             <h5>My Orders</h5>
           </div>
           <div>
-            <i
-              ><img
+            <a href="./cart.html">
+              <img
                 src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt7888ec93d3d5c1ec/5e17829300c38f0f022d3646/Header-Icon-PWA-bag.svg?height=25&width=44"
                 alt=""
-            /></i>
+            />
+            </a>
             <h5><span>(0)</span>Cart</h5>
           </div>
         </div>
@@ -144,7 +145,7 @@
       <nav>
         <div id="options">
           <ul>
-            <li id="birthday"><a href="#">BIRTHDAY</a>
+            <li id="birthday"><a href="./product.html">BIRTHDAY</a>
               <ul>
                 <li><a href="#">Birthday</a></li>
                 <li><a href="#">Birthday</a></li>
