--- a/wish.html
+++ b/wish.html
@@ -85,20 +85,20 @@
         </div>
   
         <div id="nav">
-          <div id="nav-left">
+          <div id="nav-left"><a href="index.html">
             <img
               src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltce6d6c480577e10e/5d4866eff9ece57fa9a82245/flowers.png?quality=60&auto=webp&optimize={medium}"
               alt=""
-            />
+            /></a>
           </div>
           <div id="nav-center">
             <input type="text" placeholder="Enter Keyword or Product Number" />
-            <button>SEARCH</button>
+            <button style="margin-top: 9px;">SEARCH</button>
           </div>
           <div id="nav-right">
             <!-- <i class="fa-regular fa-user"></i>
                   <i class="fa-regular fa-heart"></i>-->
-            <div>
+            <div class="signin">
               <i
                 ><img
                   src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt88337dc20d1d8278/5e178293942caf0fc36b77ab/Header-Icon-PWA-profile.svg"
