--- a/product.html
+++ b/product.html
@@ -89,11 +89,11 @@
     </div>
 
     <div id="nav">
-      <div id="nav-left">
-        <img
+      <div id="nav-left"><a href="index.html">
+        <img 
           src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltce6d6c480577e10e/5d4866eff9ece57fa9a82245/flowers.png?quality=60&auto=webp&optimize={medium}"
           alt=""
-        />
+        /></a>
       </div>
       <div id="nav-center">
         <input type="text" placeholder="Enter Keyword or Product Number" />
@@ -102,7 +102,7 @@
       <div id="nav-right">
         <!-- <i class="fa-regular fa-user"></i>
               <i class="fa-regular fa-heart"></i>-->
-        <div>
+        <div class="signin">
           <i
             ><img
               src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt88337dc20d1d8278/5e178293942caf0fc36b77ab/Header-Icon-PWA-profile.svg"
@@ -111,7 +111,7 @@
           </i>
           <h5>Sign In</h5>
         </div>
-        <div>
+        <div class="orders">
           <i
             ><img
               src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltd7f3af8e242d37c1/5e1782936430b50f03d6ccc3/Header-Icon-PWA-truck.svg?height=25&width=44"
@@ -119,7 +119,7 @@
           /></i>
           <h5>My Orders</h5>
         </div>
-        <div>
+        <div class="bag">
           <i
             ><img
               src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt7888ec93d3d5c1ec/5e17829300c38f0f022d3646/Header-Icon-PWA-bag.svg?height=25&width=44"
@@ -130,7 +130,7 @@
       </div>
     </div>
   </div>
-  <h1>Product Page</h1>
+  <!-- <h1>Product Page</h1> -->
 
 
 
@@ -141,7 +141,7 @@
       <div id="plz-sort" class="sortfilter">
         <label for="sort" class="select">Sort By: </label>
         <select name="sort" class="select arrange">
-          <option value="#">select</option>
+          <option value="">select</option>
           <option value="dsc-p">Price: High To Low</option>
           <option value="asc-p">Price: Low To High</option>
           <option value="str-i">A - Z</option>
@@ -151,10 +151,10 @@
 
 
 
-      <div id="filter" class="sortfilter">
+      <div id="filtering" class="sortfilter">
         <label for="filter" class="select">Filter By:</label>
-        <select name="filter" class="select arrange">
-          <option value="#">select</option>
+        <select name="filter" id="filter"  class="select">
+          <option value="">select</option>
           <option value="price">Filter By Price</option>
           <!-- <option value="asc-p">Price: Low To High</option> -->
           <option value="Basket Of Wishes">Wish Basket</option>
