--- a/checkout.html
+++ b/checkout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./styles/dropdown.css">
     <link rel="stylesheet" href="./styles/cart.css">
+    <link rel="stylesheet" href="./">
 </head>
 
 <body>
@@ -116,15 +117,14 @@
                   src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltd7f3af8e242d37c1/5e1782936430b50f03d6ccc3/Header-Icon-PWA-truck.svg?height=25&width=44"
                   alt=""
               /></i>
-              <h5>My Orders</h5>
+              <a href="./cart.html"><h5>My Orders</h5></a>
             </div>
             <div>
-              <i
-                ><img
+              <a href="./cart.html"><img
                   src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt7888ec93d3d5c1ec/5e17829300c38f0f022d3646/Header-Icon-PWA-bag.svg?height=25&width=44"
                   alt=""
-              /></i>
-              <h5><span>(0)</span>Cart</h5>
+              />
+              <h5><span>(0)</span>Cart</h5></a>
             </div>
           </div>
         </div>
@@ -132,16 +132,16 @@
         <nav>
           <div id="options">
             <ul>
-              <li id="birthday"><a href="#">BIRTHDAY</a></li>
-              <li id="sympathy"><a href="#">SYMPATHY</a></li>
-              <li id="occasion"><a href="#">OCCASIONS</a></li>
-              <li id="flowers"><a href="#">FLOWERS</a></li>
-              <li id="plants"><a href="#">PLANTS</a></li>
-              <li id="food"><a href="#">GIFT BASKETS & FOOD</a></li>
-              <li id="gift"><a href="#">GIFTS & MORE</a></li>
-              <li id="delivery"><a href="#">SAME-DAY DELIVERY</a></li>
-              <li id="sale"><a href="#">SALE</a></li>
-              <li id="community"><a href="#">COMMUNITY</a></li>
+              <li id="birthday"><a href="./product.html">BIRTHDAY</a></li>
+              <li id="sympathy"><a href="./product.html">SYMPATHY</a></li>
+              <li id="occasion"><a href="./product.html">OCCASIONS</a></li>
+              <li id="flowers"><a href="./product.html">FLOWERS</a></li>
+              <li id="plants"><a href="./product.html">PLANTS</a></li>
+              <li id="food"><a href="./product.html">GIFT BASKETS & FOOD</a></li>
+              <li id="gift"><a href="./product.html">GIFTS & MORE</a></li>
+              <li id="delivery"><a href="./product.html">SAME-DAY DELIVERY</a></li>
+              <li id="sale"><a href="./product.html">SALE</a></li>
+              <li id="community"><a href="./product.html">COMMUNITY</a></li>
             </ul>
           </div>
         </nav>
@@ -200,7 +200,6 @@
 
     <div id="payment">
       <h1>Payment Method</h1>
-      <div><input type="checkbox">Nykaa Pay</div>
       <div><input type="checkbox">UPI Pay</div>
       <div><input type="checkbox">Pay With Debit/Credit/ATM cards </div>
       <div><input type="checkbox">EMI Available</div>
@@ -210,6 +209,100 @@
 
   </div>
 
+  
+
+  <div id="bottomtext">
+    <div class="bottompart">
+      <h4>More Ways To shop</h4>
+      <p>FLower Delivery Same-Day</p>
+      <p>Flower Arrangement</p>
+      <p>Sympathy Flowers & Gifts</p>
+      <p>Roses</p>
+      <p>Birthday FLowers & Gifts</p>
+      <p>Flower Subscription</p>
+      <p>Plants</p>
+      <p>Gifts Baskets & Food</p>
+      <p>Mother's Day Flowers</p>
+      <p>International Flower Delivery</p>
+      <p>Find a Local Florist</p>
+      <p>Corporate Gifts</p>
+      <p>Choclate Covered Strawberries</p>
+      <p>Marketplace Sellers</p>
+    </div>
+    <div class="bottompart">
+      <h4>Customer Service</h4>
+      <p>Customer Service</p>
+      <p>COVID-19 Updates</p>
+      <p>eGift Cards</p>
+      <p>Contact Us</p>
+      <p>Do Not Sell My Personal Information</p>
+      <p>Allergy Warnging</p>
+      <p>Funeral/Sympathy Advisors</p>
+      <p>Smile Guarantee</p>
+      <h4>Veteran Advantage</h4>
+      <p>Get Exclusive Military Discounts Everyday</p>
+    </div>
+    <div class="bottompart">
+      <h4>Our Stories</h4>
+      <p>Store Locator</p>
+      <p>Franchies Opportunities</p>
+      <p>Local DIY Events</p>
+      <h4>Account Login</h4>
+      <p>Sign in to your Account</p>
+    </div>
+    <div class="bottompart">
+      <h4>Corporate</h4>
+      <p>About Us</p>
+      <p>Our Brands</p>
+      <p>Socal Responsibility</p>
+      <p>Carrers</p>
+      <p>News & Media</p>
+      <p>Investors</p>
+    </div>
+    <div class="bottomicons">
+      <h4>Follow Us</h4>
+      <div>
+        <div class="bicons">
+          <img
+            src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt787e53ec7675db95/5ee1016e26fd9f3b64a5abe7/social-icon-twitter.png"
+            alt=""
+          />
+        </div>
+        <div class="bicons">
+          <img
+            src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt71c1a01174910073/5ee101831579a83a8b80b9ad/social-icon-facebook.png"
+            alt=""
+          />
+        </div>
+        <div class="bicons">
+          <img
+            src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt78b7b39043ac2de3/5ee101965cffd6317204ad4a/social-icon-instagram.png"
+            alt=""
+          />
+        </div>
+        <div class="bicons">
+          <img
+            src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt6ae8236f023d5359/5ee101a4f2c45903a4be0b8b/social-icon-pinterest.png"
+            alt=""
+          />
+        </div>
+        <div class="bicons">
+          <img
+            src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltbd439ba082738790/5ee101b758284c442bf7faea/social-icon-youtube.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="endline">
+    <div>
+      <p>
+        © 2023 1-800-Flowers.com, Inc., Jericho, NY Family of BrandsTerms of
+        Use-Privacy Notice-Accessibility Statement
+      </p>
+    </div>
+  </div>
 
 </body>
 <script>
