--- a/wish.html
+++ b/wish.html
@@ -107,7 +107,7 @@
               </i>
               <h5>Sign In</h5>
             </div>
-            <div>
+            <div class="orders">
               <i
                 ><img
                   src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltd7f3af8e242d37c1/5e1782936430b50f03d6ccc3/Header-Icon-PWA-truck.svg?height=25&width=44"
@@ -115,13 +115,13 @@
               /></i>
               <h5>My Orders</h5>
             </div>
-            <div>
+            <div class="bag">
               <i
                 ><img
                   src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt7888ec93d3d5c1ec/5e17829300c38f0f022d3646/Header-Icon-PWA-bag.svg?height=25&width=44"
                   alt=""
               /></i>
-              <h5><span>(0)</span>Cart</h5>
+              <h5><span id="cartTotal">(0)</span>Cart</h5>
             </div>
           </div>
         </div>
