--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
   };
   let shopnow = document.querySelector(".btn");
   shopnow.onclick = () => {
-    location.href = "./product.html";
+    location.href = "./login.html";
   };
   let bag = document.querySelector(".bag");
   bag.onclick = () => {
