--- a/checkout.html
+++ b/checkout.html
@@ -374,7 +374,7 @@
 
 
 
-  let Total = document.getElementById("cartTotal")
+  let Total = document.getElementById("cartTotal");
   Total.innerText = Cart.length
 
 
