--- a/placeorder.html
+++ b/placeorder.html
@@ -223,7 +223,7 @@
       delivery.textContent = sum * 0.1;
       tax.textContent = sum * 0.1;
   
-      total.textContent = eval(Math.floor(sum - sum * 0.05 + sum * 0.1 + sum * 0.1));
+      total.textContent = eval(Math.floor(sum - sum * 0.05 + sum * 0.1 + sum * 0.1))
       location.reload()
     }
 
