--- a/cart.html
+++ b/cart.html
@@ -115,7 +115,7 @@
             <i
 
           
-            <a href="./cart.html"
+             <a href="./cart.html"
 
               ><img
                 src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltd7f3af8e242d37c1/5e1782936430b50f03d6ccc3/Header-Icon-PWA-truck.svg?height=25&width=44"
@@ -173,7 +173,7 @@
             <hr />
             <div>
               <div><p>Delivery charges</p></div>
-              <div id="delivery">0</div>
+              <div id="delivery">Free</div>
             </div>
             <hr />
             <div>
@@ -364,7 +364,7 @@
       delivery.textContent = sum;
       tax.textContent = Math.floor(sum * 0.1);
 
-      total.textContent = eval(Math.floor(sum - sum * 0.05 + sum * 0.1 + sum * 0.1));
+      total.textContent = eval(Math.floor(sum - sum * 0.05 + sum * 0.1));
     }
 
     DisplayProduct();
