--- a/cart.html
+++ b/cart.html
@@ -184,7 +184,7 @@
             </div>
           </div>
           <div id="check">
-            <button><a href="./checkout.html">Proceed TO checkout</a></button>
+            <button ><a href="./checkout.html"style="color:white" >Proceed TO checkout</a></button>
           </div>
         </div>
       </div>
