--- a/product.html
+++ b/product.html
@@ -96,8 +96,8 @@
         /></a>
       </div>
       <div id="nav-center">
-        <input type="text" placeholder="Enter Keyword or Product Number" id="" />
-        <button style="margin-top: 9px;">SEARCH</button>
+        <input type="text" placeholder="Enter Keyword or Product Number" id="search" />
+        <button style="margin-top: 9px;" id="sbtn">SEARCH</button>
       </div>
       <div id="nav-right">
         <!-- <i class="fa-regular fa-user"></i>
@@ -172,7 +172,7 @@
         </select>
         
       </div>
-      <img class="canvaimage" src="Flower4Ucropped.gif" alt="">
+      <!-- <img class="canvaimage" src="Flower4Ucropped.gif" alt=""> -->
     </div>
 
     
